projects/compiler/test/parser/import_error_alias_bad_module.out
Error at %FILE_NAME%:1:8
Unexpected token 'int', expected one of 'string', 'identifier':
  |  import 123 as abc
            ^