projects/compiler/test/parser/import_error_alias_bad_module.abra
import 123 as abc